Thu Jun  8 17:42:40 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Remove excess definitions of prefix, exec_prefix,
		etc. (defined in config/pre.in)

Wed Jun  7 16:10:22 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in (INSTALLMKDIRS): Make sure that the
		$(INSTALL_PREFIX) directory exists, not $(KRB5ROOT).

Tue Jun  6 12:38:12 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Build the krb524 directory.

Tue May 30 18:53:56 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: removed des425 stuff for Windows.

Fri May 26 21:45:50 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Export $(CC) for the benefit of config.guess

	* Makefile.in: Create kerbsrc-nt.zip with the right filename, and
		clean up include/krb5.h after making the Windows .zip files.

Fri May 26 15:33:12 1995 Keith Vetter (keithv@fusion.com)

	* wconfig.c: extended so it ignores lines beginning with '@'.

Fri May 26 10:16:02 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: added lib/kadm and deleted lib/krb425 from PC stuff.

Thu May 25 11:30:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: don't copy profile.h here but do it in include/makefile.

Tue May 23 15:39:40 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Generate krb5.h from krb5.hin in awk-windows, for
		the Windows port.

		Added kerbsrc-nt.zip, which creates the zip file without
		the option to truncate the names to the MS-DOS 8.3
		convention. 

Tue May 16 03:05:30 1995  Tom Yu  (tlyu@dragons-lair)

	* aclocal.m4 (_MAKE_SUBDIRS): fix rule so that MAKEFLAGS gets
		processed correctly.

Fri May  5 01:50:08 1995  Theodore Y. Ts'o  (tytso@dcl)

	* patchlevel.h: Update patchlevel for BETA 5 release

	* Makefile.in: Remove all files in ZIPCLEANUP after building
		kerbsrc.zip.  This keeps the source directory clean after
		building a Windows source distribution.

		Remove miscellaneous targets left over from the bad old
		imake days.

Tue May  2 21:26:09 1995  Tom Yu  (tlyu@dragons-lair)
